--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vue.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%- title %></title>
   </head>
@@ -96,7 +96,7 @@
       if (globalState) {
         const dot = document.querySelectorAll(".dot i");
         const html = document.querySelector("html");
-        dot.forEach(item => (item.style.background = globalState.primary));
+        dot.forEach((item) => (item.style.background = globalState.primary));
         if (globalState.isDark) html.style.background = "#141414";
       }
     </script>
